modify title tags, added dentists page

--- a/src/template.html
+++ b/src/template.html
@@ -7,7 +7,7 @@
 
     <meta
       name="description"
-      content="Hiteles, naprakész információk a koronavírusról, a védekezés, megelőzés lehetőségeiről, balassagyarmat és térsége számára."
+      content="Hiteles, naprakész információk a COVID-19 koronavírusról, a védekezés, megelőzés lehetőségeiről, balassagyarmat és térsége számára."
     />
     <meta name="author" content="Smart-Bee Web Balassagyarmat" />
     <meta name="robots" content="index, follow" />
@@ -23,7 +23,7 @@
     />
     <meta
       property="og:description"
-      content="Hiteles, naprakész információk a koronavírusról, a védekezés, megelőzés lehetőségeiről, balassagyarmat és térsége lakossága számára."
+      content="Hiteles, naprakész információk a COVID-19 koronavírusról, a védekezés, megelőzés lehetőségeiről, balassagyarmat és térsége számára."
     />
     <meta property="og:image" content="https://bgykaranten.hu/corona.jpg" />
     <meta property="og:url" content="https://bgykaranten.hu/" />
