added facebook share btn, doctors btn in main page

--- a/src/template.html
+++ b/src/template.html
@@ -17,16 +17,16 @@
     />
     <meta name="og:locale" content="hu_HU" />
     <meta property="og:type" content="website" />
-    <meta
+    <!-- <meta
       property="og:title"
       content="koronavírus-betegséggel kapcsolatos infomációk balassagyarmat és térsége számára."
-    />
+    /> -->
     <meta
       property="og:description"
       content="Hiteles, naprakész információk a COVID-19 koronavírusról, a védekezés, megelőzés lehetőségeiről, balassagyarmat és térsége számára."
     />
-    <meta property="og:image" content="https://bgykaranten.hu/corona.jpg" />
-    <meta property="og:url" content="https://bgykaranten.hu/" />
+    <!-- <meta property="og:image" content="https://bgykaranten.hu/corona.jpg" />
+    <meta property="og:url" content="https://bgykaranten.hu/" /> -->
 
     %sapper.base%
 
